# javeed-plugins

./: README.md  render.yaml
.claude-plugin/: marketplace.json
javeed-ordio/: .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml
javeed-ordio/.claude-plugin/: plugin.json
javeed-ordio/allocation_core/: __init__.py  allocator.py  comparison.py  constraints.py  llm_allocator.py  mechanisms.py  preferences.py  roles.py  time_utils.py
javeed-ordio/allocation_core/io/: __init__.py  db_loader.py  directives.py  extractors.py  reader.py  schemas.py  writer.py  xlsx.py
javeed-ordio/allocation_core/io/tests/: test_build_profile.py  test_extractors.py  test_roundtrip.py  test_schemas.py
javeed-ordio/commands/: ordio-compare.md  ordio-employee.md  ordio-gaps.md  ordio-plan.md  ordio-wake-up.md  ordio-weekly.md
javeed-ordio/config/: constraint_profiles.json
javeed-ordio/javeed_ordio/: __init__.py  compare.py  config.py  eval_lite.py  ingest.py  mcp_server.py  ordio_client.py  storage.py  utils.py
javeed-ordio/skills/cowork-gap-resolution/: SKILL.md
javeed-ordio/skills/cowork-optimization/: SKILL.md
javeed-ordio/skills/cowork-planning/: SKILL.md
javeed-ordio/skills/ordio-allocation/: SKILL.md
javeed-ordio/skills/ordio-allocation/references/: algorithm.md  constraints.md  html-reports.md  mechanisms.md  review-sheet.md
javeed-ordio/skills/ordio-data/: SKILL.md
javeed-ordio/skills/ordio-evals/: SKILL.md
javeed-ordio/skills/ordio-evals/references/: golden-comparison.md  metrics.md
javeed-ordio/skills/ordio-profiles/: SKILL.md
(+11 files in other folders)
